# password-generator-rust

./: .gitignore  Cargo.toml  Makefile  README.md
src/: config_read.rs  console_args.rs  generator.rs  lib.rs  main.rs
src/resources/: config.toml
