[package]
name = "password-generator"
version = "0.2.0"
edition = "2021"

[dependencies]
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
rand = "0.8.5"
getopts = "0.2.21"
threadpool = "1.8.1"
config = "0.14.0"
toml = "0.8.14"
lazy_static = "1.4"
serde = "1.0.202"
serde_derive = "1.0.202"

[profile.release]
opt-level = 3
